--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/p1.jpg" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p1.jpg" class="img-gal">
+								<a src="img/portfolio/p1.jpg" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
@@ -202,7 +202,7 @@
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/p2.jpg" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p2.jpg" class="img-gal">
+								<a src="img/portfolio/p2.jpg" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
