--- a/index.html
+++ b/index.html
@@ -183,16 +183,9 @@
 					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p1.jpg" alt="">
-								<div class="overlay"></div>
-								<a src="img/portfolio/p1.jpg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
-							</div>
+								<img class="img-fluid w-100" src="img/portfolio/p1.jpg" alt=""></div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Color Mapping of Temperature Scalar Field in Python</a></h4>
+								<h4><a href="#">Color Mapping of Temperature Scalar Field in Python</a></h4>
 								<p>Physics</p>
 							</div>
 						</div>
@@ -201,15 +194,9 @@
 						<div class="portfolio_box">
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/p2.jpg" alt="">
-								<div class="overlay"></div>
-								<a src="img/portfolio/p2.jpg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Plotting Graphs in Python using matplotlib</a></h4>
+								<h4><a href="#">Plotting Graphs in Python using matplotlib</a></h4>
 								<p>Physics, Maths</p>
 							</div>
 						</div>
