--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p1.jpg" alt=""></div>
+								<img class="img-fluid w-100" src="img/portfolio/p1.png" alt=""></div>
 							<div class="short_info">
 								<h4><a href="#">Color Mapping of Temperature Scalar Field in Python</a></h4>
 								<p>Physics</p>
@@ -193,7 +193,7 @@
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p2.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/p2.png" alt="">
 							</div>
 							<div class="short_info">
 								<h4><a href="#">Plotting Graphs in Python using matplotlib</a></h4>
