--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<h1 class="text-uppercase">I am Vishal</h1>
 							<h5 class="text-uppercase">Budding Programmer</h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn tr-bg" href="http://download1503.mediafire.com/b4smtsd8dzfg/e184eo17f7djf4f/Vishal%5C%27s+Resume.pdf"><span>Download Resume</span></a>
+								<a class="primary_btn" href="http://download1503.mediafire.com/b4smtsd8dzfg/e184eo17f7djf4f/Vishal%5C%27s+Resume.pdf"><span>Download Resume</span></a>
 							</div>
 						</div>
 					</div>
@@ -99,7 +99,6 @@
 							it. Nothing can be better than commanding a machine to do something for you. This very 
 							thing made me fall in love with it. ;) 
 						</p>
-						<a class="primary_btn" href="#"><span>Download CV</span></a>
 					</div>
 				</div>
 			</div>
