--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/p1.jpg" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p1.jpg" class="img-gal">
+								<a href="img/portfolio/p1.png" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
@@ -106,7 +106,7 @@
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p2.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/p2.png" alt="">
 								<div class="overlay"></div>
 								<a href="img/portfolio/p2.jpg" class="img-gal">
 									<div class="icon">
