--- a/portfolio.html
+++ b/portfolio.html
@@ -89,16 +89,16 @@
 					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p1.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/p1.png" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p1.png" class="img-gal">
+								<a href="#" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">COLOR MAPPING OF TEMPERATURE SCALAR FIELD IN PYTHON</a></h4>
+								<h4><a href="#">COLOR MAPPING OF TEMPERATURE SCALAR FIELD IN PYTHON</a></h4>
 								<p>Physics</p>
 							</div>
 						</div>
@@ -108,14 +108,14 @@
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/p2.png" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p2.jpg" class="img-gal">
+								<a href="#" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">PLOTTING GRAPHS IN PYTHON USING MATPLOTLIB</a></h4>
+								<h4><a href="#">PLOTTING GRAPHS IN PYTHON USING MATPLOTLIB</a></h4>
 								<p>Physics, Maths</p>
 							</div>
 						</div>
