--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/p1.png" alt="">
 								<div class="overlay"></div>
-								<a href="#" class="img-gal">
+								<a href="img/portfolio/p1.png" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
@@ -108,7 +108,7 @@
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/p2.png" alt="">
 								<div class="overlay"></div>
-								<a href="#" class="img-gal">
+								<a href="img/portfolio/p2.png" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
