--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="#">PLOTTING GRAPHS IN PYTHON USING MATPLOTLIB</a></h4>
+								<h4><a href="https://github.com/Vishu1694/Plotting-Graphs-in-Python">PLOTTING GRAPHS IN PYTHON USING MATPLOTLIB</a></h4>
 								<p>Physics, Maths</p>
 							</div>
 						</div>
