--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<h1 class="text-uppercase">I am Vishal</h1>
 							<h5 class="text-uppercase">Budding Programmer</h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="https://cdn.filesend.jp/private/0ToNoF5EqeLp4DVLVoCgFG0R6PeFHonJDv5VioLXpTsyisHUWMJ-dYVwXa2s98P-/Vishal%27s%20Resume.pdf"><span>Download Resume</span></a>
+								<a class="primary_btn" href="https://cdn.filesend.jp/private/0ToNoF5EqeLp4DVLVoCgFG0R6PeFHonJDv5VioLXpTsyisHUWMJ-dYVwXa2s98P-/Vishal%27s%20Resume.pdf" target="_blank"><span>Download Resume</span></a>
 							</div>
 						</div>
 					</div>
