--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="mail.google.com">tiwarivishal1694@gmail.com</a></h6>
+                            <h6><a href="mail.google.com">askvishal@vishalcodes.tech</a></h6>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
