--- a/tuckshop/items.html
+++ b/tuckshop/items.html
@@ -5,9 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="Viewport" content="width=device-width, initial-scale=1">
 	<title>LPU Tuck Shop</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body>
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
@@ -25,8 +26,8 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a href="index.html" class="navbar-left visible-md visible-lg"><img src="assets/navbar-logo.png"></a>
-		      <a class="navbar-brand MH-a" href="index.html"><span class="MainHeading">LPU TUCK SHOPS</span></a>
+		      <a href="index.html" class="navbar-left visible-lg"><img id="navbar-logo" src="assets/navbar-logo.jpg"></a>
+		      <a class="navbar-brand hidden-lg" id="brand-name-lpu" href="index.html">LPU TUCK SHOPS</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
