--- a/chem/items.html
+++ b/chem/items.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="Viewport" content="width=device-width, initial-scale=1">
-	<title>LPU Tuck Shop</title>
+	<title>Solid Waste Management</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
