Logo image fixed for index.html

--- a/vishal/index.html
+++ b/vishal/index.html
@@ -27,7 +27,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a href="index.html" class="navbar-left visible-lg"><img id="navbar-logo" src="assets/navbar-logo.jpg"></a>
+		      <a href="index.html" class="navbar-left visible-lg"><div id="navbar-logo"></div></a>
 		      <a class="navbar-brand hidden-lg" id="brand-name-lpu" href="index.html">LPU TUCK SHOPS</a>
 		    </div>
 
