Logo Removed and Fixed for index.html

--- a/vishal/index.html
+++ b/vishal/index.html
@@ -27,8 +27,8 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a href="index.html" class="navbar-left visible-lg"><div id="navbar-logo"></div></a>
-		      <a class="navbar-brand hidden-lg" id="brand-name-lpu" href="index.html">LPU TUCK SHOPS</a>
+		      <!--<a href="index.html" class="navbar-left hidden-lg"><div id="navbar-logo"></div></a>-->
+		      <a class="navbar-brand" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
