logo problem fixed for all pagess

--- a/vishal/items.html
+++ b/vishal/items.html
@@ -27,16 +27,16 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a href="index.html" class="navbar-left visible-lg"><img id="navbar-logo" src="assets/navbar-logo.jpg"></a>
-		      <a class="navbar-brand hidden-lg" id="brand-name-lpu" href="index.html">LPU TUCK SHOPS</a>
+		      <!--<a href="index.html" class="navbar-left hidden-lg"><div id="navbar-logo"></div></a>-->
+		      <a class="navbar-brand" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li><a class="li_a" href="index.html"><span class="glyphicon glyphicon-home"></span><br>Home<span class="sr-only">(current)</span></a></li>
+		        <li><a class="li_a" href="index.html"><span class="glyphicon glyphicon-home"></span><br>Home</a></li>
 		        <li><a class="li_a" href="shops.html"><span class="glyphicon glyphicon-shopping-cart"></span><br>Shops</a></li>
-		        <li class="active"><a class="li_a" href="items.html"><span class="glyphicon glyphicon-paperclip"></span><br>Items Avl.</a></li>
+		        <li class="active"><a class="li_a" href="items.html"><span class="glyphicon glyphicon-paperclip"></span><br>Items Avl.<span class="sr-only">(current)</span></a></li>
 		        <li><a class="li_a" href="contact.html"><span class="glyphicon glyphicon-phone-alt"></span><br>Contact</a></li>
 		        <li><a class="li_a" href="feedback.html"><span class="glyphicon glyphicon-envelope"></span><br>Feedback</a></li>
 		      </ul>
