a link in footer corrected

--- a/59/index.html
+++ b/59/index.html
@@ -109,7 +109,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<h3>MISC. INFO</h3>
 				<div>
-				<span>This site is also hosted on <a href="https://vishalcodes.tech/vishal">vishalcodes.tech/vishal</a></span>
+				<span>This site is also hosted on <a href="https://vishalcodes.tech/59">vishalcodes.tech/59</a></span>
 				</div>
 				<hr>
 				<div>Real time data has been used for this website</div>
