--- a/59/feedback.html
+++ b/59/feedback.html
@@ -83,7 +83,7 @@
 					</div>
 				</div>
 				<div class="submit-btn" style="width: 50%; margin: 4rem auto 1rem;">
-	   			<a class="btn btn-primary btn-lg" style="width: 100%; margin-top: 1.5rem;" role="button">Calculate</a>
+	   			<a class="btn btn-primary btn-lg" style="width: 100%; margin-top: 1.5rem;" role="button">Send</a>
 				</div>
 			</div>
 		</div>
