--- a/59/contact.html
+++ b/59/contact.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript" src="js/script.js"></script>
 
 	<header>
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default" id="navbar-id-lpu">
 		  <div class="container">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -26,8 +26,8 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <!--<a href="index.html" class="navbar-left hidden-lg"><div id="navbar-logo"></div></a>-->
-		      <a class="navbar-brand" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
+		      <a href="index.html" class="navbar-left visible-xs visible-sm visible-md visible-lg"><div id="navbar-logo"></div></a>
+		      <a class="navbar-brand hidden-xs hidden-sm hidden-md hidden-lg" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,8 +36,8 @@
 		        <li><a class="li_a" href="index.html"><span class="glyphicon glyphicon-home"></span><br>Home</a></li>
 		        <li><a class="li_a" href="shops.html"><span class="glyphicon glyphicon-shopping-cart"></span><br>Shops</a></li>
 		        <li><a class="li_a" href="items.html"><span class="glyphicon glyphicon-paperclip"></span><br>Items Avl.</a></li>
-		        <li class="active"><a class="li_a" href="contact.html"><span class="glyphicon glyphicon-phone-alt"></span><br>Contact<span class="sr-only">(current)</span></a></li>
-		        <li><a class="li_a" href="feedback.html"><span class="glyphicon glyphicon-envelope"></span><br>Feedback</a></li>
+		        <li class="active"><a class="li_a" href="contact.html"><span class="glyphicon glyphicon-phone-alt"></span><br>Contact</a></li>
+		        <li><a class="li_a" href="feedback.html"><span class="glyphicon glyphicon-envelope"></span><br>Feedback<span class="sr-only">(current)</span></a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
@@ -47,6 +47,12 @@
 	<!-- Main body here -->
 	<div class="main-body">
 		<div class="container">
+			<div class="shops-intro">
+				<h1>Wanna speak to us?</h1>
+				<h3>We would be glad to hear from you...<br> Please pick the desired tuckshop you want to talk to and have their details.....</h3>
+			</div>
+			<div style="background-color: #E8DFF2; border-radius: 10px; margin-top: 5rem;">
+			<div style="padding: 10px 14px 0px;">
 			<div class="row">
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="info-container">
@@ -274,6 +280,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 	</div>
 	<!-- Main body ends here -->
