--- a/59/index.html
+++ b/59/index.html
@@ -17,7 +17,7 @@
 
 	<!--HEADER BEGINS HERE-->
 	<header>
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default" id="navbar-id-lpu">
 		  <div class="container">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -27,18 +27,18 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <!--<a href="index.html" class="navbar-left hidden-lg"><div id="navbar-logo"></div></a>-->
-		      <a class="navbar-brand" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
+		      <a href="index.html" class="navbar-left visible-xs visible-sm visible-md visible-lg"><div id="navbar-logo"></div></a>
+		      <a class="navbar-brand hidden-xs hidden-sm hidden-md hidden-lg" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li class="active"><a class="li_a" href="index.html"><span class="glyphicon glyphicon-home"></span><br>Home<span class="sr-only">(current)</span></a></li>
+		        <li class="active"><a class="li_a" href="index.html"><span class="glyphicon glyphicon-home"></span><br>Home</a></li>
 		        <li><a class="li_a" href="shops.html"><span class="glyphicon glyphicon-shopping-cart"></span><br>Shops</a></li>
 		        <li><a class="li_a" href="items.html"><span class="glyphicon glyphicon-paperclip"></span><br>Items Avl.</a></li>
 		        <li><a class="li_a" href="contact.html"><span class="glyphicon glyphicon-phone-alt"></span><br>Contact</a></li>
-		        <li><a class="li_a" href="feedback.html"><span class="glyphicon glyphicon-envelope"></span><br>Feedback</a></li>
+		        <li><a class="li_a" href="feedback.html"><span class="glyphicon glyphicon-envelope"></span><br>Feedback<span class="sr-only">(current)</span></a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
@@ -50,11 +50,16 @@
 	<div class="main-body">
 	<!--JUMBOTRON BEGINS HERE-->
 		<div class="container">
-			<div class="jumbotron">
-	 			<h1>Hello!</h1>
+			<div class="col-md-6 col-sm-12 col-xs-12 pull-left" id="intro-parent">
+	 			<h1 class="intro-homepage">Hello!----</h1>
+	 			<div class="intro-homepage-sec">
 	 				<p style="margin-top: 5rem;">Couldn't figure out where to get your stationery stuff here in LPU?</p>
 	 				<p>Worry Not, We have got you covered. Below are some options you can use to figure out where you can find your respective stationery items and also the location of shop and their feedbacks.</p>
-	 				<p>HAPPY LEARNING!</p>
+	 				<p><strong>HAPPY LEARNING!</strong></p>
+				</div>
+			</div>
+			<div class="visible-md visible-lg col-md-6 pull-left" id="homepage-vectorArt">
+				<img src="assets/homepage-vector-img.png" class="img-responsive">
 			</div>
 		</div>
 		<!--JUMBTRON ENDS HERE-->
