--- a/59/shops.html
+++ b/59/shops.html
@@ -17,7 +17,7 @@
 
 	<!-- HEADER BEGINS HERE -->
 	<header>
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default" id="navbar-id-lpu">
 		  <div class="container">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -27,18 +27,18 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <!--<a href="index.html" class="navbar-left hidden-lg"><div id="navbar-logo"></div></a>-->
-		      <a class="navbar-brand" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
+		      <a href="index.html" class="navbar-left visible-xs visible-sm visible-md visible-lg"><div id="navbar-logo"></div></a>
+		      <a class="navbar-brand hidden-xs hidden-sm hidden-md hidden-lg" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li><a class="li_a" href="index.html"><span class="glyphicon glyphicon-home"></span><br>Home<span class="sr-only">(current)</span></a></li>
-		        <li class="active"><a class="li_a" href="shops.html"><span class="glyphicon glyphicon-shopping-cart"></span><br>Shops<span class="sr-only">(current)</span></a></li>
+		        <li><a class="li_a" href="index.html"><span class="glyphicon glyphicon-home"></span><br>Home</a></li>
+		        <li class="active"><a class="li_a" href="shops.html"><span class="glyphicon glyphicon-shopping-cart"></span><br>Shops</a></li>
 		        <li><a class="li_a" href="items.html"><span class="glyphicon glyphicon-paperclip"></span><br>Items Avl.</a></li>
 		        <li><a class="li_a" href="contact.html"><span class="glyphicon glyphicon-phone-alt"></span><br>Contact</a></li>
-		        <li><a class="li_a" href="feedback.html"><span class="glyphicon glyphicon-envelope"></span><br>Feedback</a></li>
+		        <li><a class="li_a" href="feedback.html"><span class="glyphicon glyphicon-envelope"></span><br>Feedback<span class="sr-only">(current)</span></a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
@@ -50,10 +50,14 @@
 	<!--MAIN BODY STARTS HERE -->
 	<div class="main-body">
 		<div class="container">
+			<div class="shops-intro">
+				<h1>Issue finding Tuckshops?</h1>
+				<h3>Worry not. We have got you covered.<br>Use our tool below to find the nearest tuckshop to you by entering the current block you are in.</h3>
+			</div>
 			<div class="container-loc">
 				<div class="text-info-style">
 					<span id="locate-mark" class="glyphicon glyphicon-map-marker"></span>
-					<h3 style="display: inline;">&nbsp LOCATE ANY STORE NEAR YOUR CURRENT BLOCK.</h3>
+					<h3 style="display: inline;">&nbsp LOCATE ANY STORE NEAR YOU</h3>
 				</div>
 				<div class="input-group block-input widht-i-d">
 		      		<input type="text" class="form-control curr-block-input" placeholder="Enter the current block you are in...">
@@ -62,17 +66,17 @@
 		   			</span>
 		   		</div><!-- /input-group -->
 		   		<div id="nearest-block-got" class=></div>
-				<div class="info-shops" style="background-color: #D4C6E4; border-radius: 5% 40%;">
-					<div class="rows">
+				<div class="info-shops">
+					<div class="row">
 						<div class="col-lg-6 pull-left">
 							<div class="col-lg-4">
-								Phone:&nbsp
+								<strong>Phone:</strong>&nbsp
 							</div>
 							<div class="col-lg-8 to-fill-phone"></div>
 						</div>
 						<div class="col-lg-6 pull-left">
 							<div class="col-lg-4">
-								Email:&nbsp
+								<strong>Email:</strong>&nbsp
 							</div>
 							<div class="col-lg-8 to-fill-email"></div>
 						</div>
