--- a/59/feedback.html
+++ b/59/feedback.html
@@ -27,7 +27,9 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a href="index.html" class="navbar-left visible-xs visible-sm visible-md visible-lg"><div id="navbar-logo"></div></a>
+		      <a href="index.html" class="navbar-left visible-xs visible-sm visible-md visible-lg"><div id="navbar-logo">
+		      	<img src="assets/navbar-Logo.png">
+		      </div></a>
 		      <a class="navbar-brand hidden-xs hidden-sm hidden-md hidden-lg" id="brand-name-lpu" href="index.html"><span id="lpu-bn" style="font-size: 4vw;">LPU TUCK SHOPS</span></a>
 		    </div>
 
