--- a/mod_2_assignment/index.html
+++ b/mod_2_assignment/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- 	Comment   -->
+	<!-- 	Comment 1  -->
 	<link rel="stylesheet" type="text/css" href="css_file.css">
 	<title>Module 2 Assignment</title>
 </head>
